@@ -57,7 +57,7 @@
                 perm <- do.call(rbind,
                                mclapply(1:permutations,
                                         function(i, ...) ptest(permat[i,],...),
-                                        mc.cores = parallel, ...))
+                                        mc.cores = parallel))
             } else {
                 if (!hasClus) {
                     parallel <- makeCluster(parallel)
